# notes_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/notes_manager/: cli.py  logger.py  models.py
