[project]
name = "notes-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav M.",email = "cranberis@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=15.0.0,<16.0.0)"
]

[tool.poetry]
packages = [{include = "notes_manager", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
